  
   -- Moved the base/Decibel class into 'units' directory.

   -- EDL parser function signature has changed slightly.

      From : Object* edl_parser(..., unsigned int* num_errors = nullptr);
      To   : Object* edl_parser(..., int* num_errors = nullptr);

      The only difference is the shift from using 'unsigned int' to 'int' to
      report a parser calculated and returned error count.
--------------------------------------------------------------------------------

#####################################################
Graphics oriented libraries
#####################################################

--------------------------------------------------------------------------------
graphics library (mixr_graphics)

   -- Updated all readout classes to use brace initialization.

   -- Renamed and moved graphics/Field to graphics/readouts/AbstractField.
      This class serves as an abstract base to several graphic readout classes.

   -- Renamed and moved graphics/Font to graphics/fonts/AbstractFont.

   -- Moved all font related (derived) classes into graphics/fonts directory.

   -- Separated all FTGL-based classes from FtglFonts.hpp/.cpp into individual
      files: AbstractFtglFont, FtglBitmapFont, FtglExtrdFont, FtglHaloFont,
      FtglOutlineFont, FtglPixmapFont, FtglPolygonFont and FtglTextureFont.

   -- Renamed 2 factory names as follows:
         FTGLTextureFonts -> FTGLTextureFont
         FTGLHaloFonts -> FTGLHaloFont
      Make sure to adjust epp/edl files to account for factory name change.

--------------------------------------------------------------------------------

#####################################################
Image generation oriented libraries
#####################################################

--------------------------------------------------------------------------------
ig library (mixr_ig)

-- Much cleanup of this library by breaking out and making explicit all the IG